# Leetcode

./: .shuxnhs.pub.swp  CMakeLists.txt  shuxnhs  shuxnhs.pub
Linked List/: 19-remove nth node from end of list.cpp  203-remove linked list element.cpp  206-reverse linked list-1.cpp  206-reverse linked list-2.cpp  206-reverse linked list-3.cpp  21-merge two sorted lists-1.cpp  234-palindrome linked list.cpp  237-delete node in a linked list.cpp  82-remove duplicates from sorted listⅡ.cpp  83-remove duplicates from sorted list.cpp  876-middle of the linked list.cpp
leetcode/Linked List/: 19-remove nth node from end of list.cpp  203-remove linked list element.cpp  206-reverse linked list-1.cpp  206-reverse linked list-2.cpp  206-reverse linked list-3.cpp  21-merge two sorted lists-1.cpp  234-palindrome linked list.cpp  237-delete node in a linked list.cpp  82-remove duplicates from sorted listⅡ.cpp  83-remove duplicates from sorted list.cpp  876-middle of the linked list.cpp
queue/: 622-Design Circular Queue.cpp  641-Design Circular Deque.cpp  862-Shortest Subarray with Sum at Least K.cpp  933-Number of Recent Calls.cpp  CMakeLists.txt
stack/: 103-Binary Tree Zigzag Level Order Traversal.cpp  144-Binary Tree Preorder Traversal(2).cpp  144-Binary Tree Preorder Traversal(3).cpp  144-Binary Tree Preorder Traversal.cpp  145-Binary Tree Postorder Traversal(2).cpp  145-Binary Tree Postorder Traversal.cpp  150-Evaluate Reverse Polish Notation.cpp  155-minstack.cpp  20-Valid Parentheses.cpp  225-Implement Stack using Queues.cpp  232-Implement Queue using Stacks.cpp  496-Next Greater Element I.cpp  682-Baseball Game.cpp  844-Backspace String Compare.cpp  856-Score of Parentheses.cpp  94-Binary Tree Inorder Traversal(2).cpp  94-Binary Tree Inorder Traversal.cpp  946-Validate Stack Sequences.cpp  Binary Tree Levelorder traversal.cpp  CMakeLists.txt
tree/: 100-Same Tree.cpp  101-Symmetric Tree.cpp  104-Maximum Depth of Binary Tree.cpp  111-Minimum Depth of Binary Tree.cpp  226-Invert Binary Tree.cpp  559-Maximum Depth of N-ary Tree.cpp  563-Binary Tree Tilt.cpp  662-Maximum Width of Binary Tree.cpp  872-Leaf-Similar Trees.cpp  CMakeLists.txt
usually/: 1.1.go  1.1.php  1.2.go  1.2.php  1.3.go  1.4.go  1.4.php  1.5.go
usually/string/: 2.1.go  2.1.php
