cmake_minimum_required(VERSION 3.12)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode        "Dynamic hash index/main.cpp")
add_executable( leetcode2      "Linked List/141-linked list cycle.cpp")
add_executable( leetcode3      "Linked List/19-remove nth node from end of list.cpp")
add_executable( leetcode4      "Linked List/203-remove linked list element.cpp")
add_executable( leetcode5      "Linked List/206-reverse linked list-1.cpp")
add_executable( leetcode6      "Linked List/206-reverse linked list-2.cpp")
add_executable( leetcode7      "Linked List/206-reverse linked list-3.cpp")
add_executable( leetcode8      "Linked List/21-merge two sorted lists-1.cpp")
add_executable( leetcode9      "Linked List/234-palindrome linked list.cpp")
add_executable( leetcode10     "Linked List/237-delete node in a linked list.cpp")
add_executable( leetcode11      "Linked List/82-remove duplicates from sorted listⅡ.cpp")
add_executable( leetcode12      "Linked List/83-remove duplicates from sorted list.cpp")
add_executable( leetcode13      "Linked List/876-middle of the linked list.cpp")
add_executable( leetcode14      "Linked List/92-reverse linked listⅡ.cpp")
add_executable( leetcode15      "Linked List/main.cpp")
add_executable( leetcode16      "stack/155-minstack.cpp")














