cmake_minimum_required(VERSION 3.12)
project(queue)

set(CMAKE_CXX_STANDARD 14)

add_executable(queue   "933-Number of Recent Calls.cpp")
add_executable(queue1  "622-Design Circular Queue.cpp" )
add_executable(queue2  "641-Design Circular Deque.cpp" )
add_executable(queue3  "862-Shortest Subarray with Sum at Least K.cpp")