cmake_minimum_required(VERSION 3.12)
project(stack)

set(CMAKE_CXX_STANDARD 14)

add_executable(stack 155-minstack.cpp )
add_executable(stack1 "225-Implement Stack using Queues.cpp")
add_executable(stack2 "496-Next Greater Element I.cpp")
add_executable(stack3 "232-Implement Queue using Stacks.cpp")
add_executable(stack4 "20-Valid Parentheses.cpp")
add_executable(stack5 "844-Backspace String Compare.cpp")
add_executable(stack6 "682-Baseball Game.cpp")
add_executable(stack7 "946-Validate Stack Sequences.cpp")