cmake_minimum_required(VERSION 3.12)
project(stack)

set(CMAKE_CXX_STANDARD 14)

add_executable(stack 155-minstack.cpp)
add_executable(stack1 "225-Implement Stack using Queues.cpp")
add_executable(stack2 "496-Next Greater Element I.cpp")
add_executable(stack3 "232-Implement Queue using Stacks.cpp")
add_executable(stack4 "20-Valid Parentheses.cpp")
add_executable(stack5 "844-Backspace String Compare.cpp")
add_executable(stack6 "682-Baseball Game.cpp")
add_executable(stack7 "946-Validate Stack Sequences.cpp")
add_executable(stack8 "144-Binary Tree Preorder Traversal.cpp")
add_executable(stack9 "144-Binary Tree Preorder Traversal(2).cpp")
add_executable(stack10 "144-Binary Tree Preorder Traversal(3).cpp")
add_executable(stack11 "94-Binary Tree Inorder Traversal.cpp")
add_executable(stack12 "94-Binary Tree Inorder Traversal(2).cpp")
add_executable(stack13 "145-Binary Tree Postorder Traversal.cpp")
add_executable(stack14 "145-Binary Tree Postorder Traversal(2).cpp")
add_executable(stack15 "Binary Tree Levelorder traversal.cpp")
add_executable(stack16 "103-Binary Tree Zigzag Level Order Traversal.cpp")
add_executable(stack17 "150-Evaluate Reverse Polish Notation.cpp")
add_executable(stack18 "856-Score of Parentheses.cpp")
