cmake_minimum_required(VERSION 3.12)
project(tree)

set(CMAKE_CXX_STANDARD 14)

add_executable(tree   "100-Same Tree.cpp")
add_executable(tree1  "101-Symmetric Tree.cpp")
add_executable(tree2  "104-Maximum Depth of Binary Tree.cpp")
add_executable(tree3  "111-Minimum Depth of Binary Tree.cpp")
add_executable(tree4  "559-Maximum Depth of N-ary Tree.cpp")
add_executable(tree5   "662-Maximum Width of Binary Tree.cpp")